My posts list and new post creation

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,11 @@
 {{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
+{{!-- {{welcome-page}} --}}
 {{!-- Feel free to remove this! --}}
 
-{{outlet}}
+{{top-pane}}
+
+{{left-pane}}
+
+<div class="app-outlet">
+    {{outlet}}
+</div>
