--- a/app/templates/components/post-card.hbs
+++ b/app/templates/components/post-card.hbs
@@ -1,17 +1,9 @@
 
 
-<div class="post">
-    <span class="title"> Kodaikanal </span> <span class="author"> by Shen Prabu </span>
-    <div class="desc"> This post is about a solo bike travel in this lockdown. Few months back I took a week leave from my work and went to Kodaikanal. It was the first time I... </div>
-    <ul class="tags"> <li> Travel </li> <li> Bike trip </li> <li> Vacation </li> </ul>
+<div class="post" {{action 'viewPost' post}}>
+    <span class="title"> {{post.title}} </span> <span class="author"> by {{post.author}} </span> <span class="edit-post" {{action 'preventDefault'}}> {{#link-to 'myposts.edit' post}} edit {{/link-to}} </span>
+    <div class="desc"> {{post.content}} </div>
+    <ul class="tags"> {{#each post.tagsArray as |tag|}} <li> {{tag}} </li> {{/each}} </ul>
 </div>
-
-{{#each posts as |post|}}
-    <div class="post">
-        <span class="title"> {{post.title}} </span> <span class="author"> by {{post.author}} </span>
-        <div class="desc"> {{post.content}} </div>
-        <ul class="tags"> {{#each post.tags as |tag|}} <li> {{tag}} </li> {{/each}} </ul>
-    </div>
-{{/each}}
 
 {{yield}}
