routes refactoring - user signin removed

--- a/app/templates/components/input-post.hbs
+++ b/app/templates/components/input-post.hbs
@@ -4,7 +4,7 @@
         
             <div class="modal-header">
                 <h2> {{#if edit}} Edit {{else}} New {{/if}} Post </h2>
-                <span class="close"> {{#link-to 'myposts'}} X {{/link-to}} </span>
+                <span class="close"> {{#link-to 'posts'}} X {{/link-to}} </span>
             </div>
 
             <div> Title </div>
