--- a/app/templates/components/post-list.hbs
+++ b/app/templates/components/post-list.hbs
@@ -1,9 +1,11 @@
 
-{{#each posts as |post|}}
-    {{post-card post=post}}
-{{else}}
-No posts yet.
-{{/each}}
+<div class="post-list">
+    {{#each posts as |post|}}
+        {{post-card post=post}}
+    {{else}}
+        No posts yet.
+    {{/each}}
+</div>
 
 
 {{yield}}
