--- a/app/templates/components/view-post.hbs
+++ b/app/templates/components/view-post.hbs
@@ -4,7 +4,7 @@
 
             <div class="modal-header">
                 <h2> {{post.title}} </h2>
-                <span class="close"> {{#link-to 'myposts'}} X {{/link-to}} </span>
+                <span class="close"> {{#link-to 'posts'}} X {{/link-to}} </span>
             </div>
 
             <p> {{post.content}} </p>
