--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -67,15 +67,15 @@ $theme_clr-2: #ffedea;
 
 }
 
-.post-list {
+.post-list-header {
+    @include display-flex-center;
 
-    .post-list-header {
-        @include display-flex-center;
-
-        .btn-new-post {
-            margin-left: auto;
-        }
+    .btn-new-post {
+        margin-left: auto;
     }
+}
+
+.post-list {
 
     .post {
         border: 1px solid;
@@ -193,4 +193,28 @@ $theme_clr-2: #ffedea;
         display: flex;
         justify-content: space-evenly;
     }
+}
+
+.login-block {
+    width: 30%;
+    margin: 10% 35%;
+    border: 1px solid;
+    padding: 20px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.login-field  {
+    margin-top: 10px;
+}
+
+.login-field-input {
+    margin-top: 5px;
+}
+
+.login-button {
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
