--- a/app/templates/components/left-pane.hbs
+++ b/app/templates/components/left-pane.hbs
@@ -1,7 +1,7 @@
 <div class="left-pane">
 
     <ul class="left-pane-list">
-        <li> {{#link-to 'posts'}} My Posts {{/link-to}} </li>
+        <li> {{#link-to 'posts'}} Blog Posts {{/link-to}} </li>
         <li> {{#link-to 'settings'}} Settings {{/link-to}} </li>
         <li> Sign out </li>
     </ul>
