--- a/app/templates/components/view-post.hbs
+++ b/app/templates/components/view-post.hbs
@@ -2,10 +2,8 @@
     <div class="modal-dialogue">
         <div class="modal-content">
 
-            <div class="modal-header">
-                <h2> {{post.title}} </h2>
-                <span class="close"> {{#link-to 'posts'}} X {{/link-to}} </span>
-            </div>
+            <span class="post--title"> {{post.title}} </span> <span class="post--author"> by {{post.author}} </span> 
+            <span class="close"> {{#link-to 'posts'}} X {{/link-to}} </span>
 
             <p> {{post.content}} </p>
 
