--- a/app/templates/posts.hbs
+++ b/app/templates/posts.hbs
@@ -1,7 +1,7 @@
 
 <div class="post-list-header">
 
-    <h2> My Posts </h2>
+    <h2> Blog Posts </h2>
 
     <button class="btn-new-post"> {{#link-to 'posts.new'}} + New Post {{/link-to}} </button>
 
