--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -166,18 +166,6 @@ $theme_clr-2: #ffedea;
         float: right;
     }
 
-    .title {
-        width: 60%;
-        height: 20px;
-        margin-bottom: 20px;
-    }
-
-    .content {
-        width: 75%;
-        height: 200px;
-        margin-bottom: 20px;
-    }
-
     .save-btn-container {
         @include display-flex-center;
         justify-content: center;
@@ -199,26 +187,24 @@ $theme_clr-2: #ffedea;
     }
 }
 
-.login-block {
-    width: 30%;
-    margin: 10% 35%;
-    border: 1px solid;
-    padding: 20px;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.input-row {
+    margin-bottom: 20px;
 }
 
-.login-field  {
-    margin-top: 10px;
+.error-msg {
+    color: red;
 }
 
-.login-field-input {
-    margin-top: 5px;
+.input-error {
+    border: 1px solid red;
 }
 
-.login-button {
-    margin-top: 10px;
-    margin-bottom: 10px;
+.text-input-large {
+    width: 60%;
+    height: 20px;
+}
+
+.text-area-large {
+    width: 75%;
+    height: 200px;
 }
