--- a/app/templates/components/post-list.hbs
+++ b/app/templates/components/post-list.hbs
@@ -1,6 +1,6 @@
 
 {{#if authors.length}}
-    {{dropdown-field label='Filter by Author' className='select-author' options=authors selected=author onchange=(action 'onChange')}}
+    <DropdownField @label='Filter by Author' @className='select-author' @options={{authors}} @selected={{author}} @onchange={{action 'onChange'}} />
 {{/if}}
 
 <div class="post-list">
