--- a/app/templates/components/post-card.hbs
+++ b/app/templates/components/post-card.hbs
@@ -3,8 +3,8 @@
 <div class="post" {{action 'viewPost' post}}>
     <span class="post--title"> {{post.title}} </span> <span class="post--author"> by {{post.author}} </span> 
     <span class="post-actions" {{action 'dummyAction' bubbles=false}}>
-        {{#link-to 'posts.edit' post}} edit {{/link-to}} &nbsp;
-        {{#link-to 'posts.delete' post}} delete {{/link-to}} 
+        {{#link-to 'posts.post.edit' post}} edit {{/link-to}} &nbsp;
+        {{#link-to 'posts.post.delete' post}} delete {{/link-to}} 
     </span>
     <div class="desc"> {{post.content}} </div>
     <ul class="tags"> {{#each post.tagsArray as |tag|}} <li> {{tag}} </li> {{/each}} </ul>
