--- a/app/templates/components/text-input-field.hbs
+++ b/app/templates/components/text-input-field.hbs
@@ -4,7 +4,7 @@
     {{#if textarea}}
         {{textarea class=inputClassName value=value}}
     {{else}}
-        {{input class=inputClassName value=value}}
+        {{input class=inputClassName value=value key-up=onchange}}
     {{/if}}
   </div>
   {{#if errorMessage}}
