Make api call and serialise in news posts

--- a/app/templates/components/left-pane.hbs
+++ b/app/templates/components/left-pane.hbs
@@ -2,7 +2,7 @@
 
     <ul class="left-pane-list">
         <li> {{#link-to 'posts'}} Blog Posts {{/link-to}} </li>
-        <li> {{#link-to 'settings'}} Settings {{/link-to}} </li>
+        <li> {{#link-to 'newsposts'}} News Posts {{/link-to}} </li>
         <li> Sign out </li>
     </ul>
 
